--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
 .dangil-flip-seq {
   perspective: 1300px;
   width: 100%;
-  max-width: 720px;
-  height: 700px;
-  min-height: 200px;
+  max-width: 700px;    /* F4 가로 기준 */
+  height: 1100px;      /* F4 세로 기준 */
+  min-height: 400px;
   position: relative;
   display: flex;
   align-items: center;
@@ -392,11 +392,11 @@
 }
 .dangil-flip-page {
   width: 100%;
-  max-width: 720px;
-  height: 700px;
+  max-width: 700px;
+  height: 1100px;
   background: #fff;
-  border-radius: 16px;
-  box-shadow: 0 8px 28px #0003;
+  border-radius: 14px;
+  box-shadow: 0 10px 36px #0003;
   position: absolute;
   left: 0; top: 0;
   transform-style: preserve-3d;
@@ -414,18 +414,18 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 16px;
+  border-radius: 14px;
   display: block;
 }
-@media (max-width: 900px) {
+/* 모바일 반응형 (가로 97vw, 세로 F4 비율 유지) */
+@media (max-width: 800px) {
   .dangil-flip-seq, .dangil-flip-page {
     max-width: 97vw;
-    height: 54vw;
-    min-height: 120px;
+    height: calc(97vw * 1.57); /* F4 비율 반영 */
+    min-height: 200px;
   }
 }
 </style>
-
 <div class="dangil-flip-wrap">
   <div class="dangil-flip-seq">
     <video id="dangilMainVideo" class="dangil-flip-page" autoplay muted playsinline>
