--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
 .dangil-flip-seq {
   perspective: 1300px;
   width: 100%;
-  max-width: 700px;    /* F4 가로 기준 */
-  height: 1100px;      /* F4 세로 기준 */
+  max-width: 700px;
+  height: 1100px;
   min-height: 400px;
   position: relative;
   display: flex;
@@ -407,23 +407,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  object-fit: cover;
+  object-fit: contain;
+  padding: 28px 18px;
+  box-sizing: border-box;
 }
 .dangil-flip-page video,
 .dangil-flip-page img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain; /* 잘림 없이 전체 표시 */
   border-radius: 14px;
   display: block;
+  background: #fff;
 }
-/* 모바일 반응형 (가로 97vw, 세로 F4 비율 유지) */
-@media (max-width: 800px) {
-  .dangil-flip-seq, .dangil-flip-page {
-    max-width: 97vw;
-    height: calc(97vw * 1.57); /* F4 비율 반영 */
-    min-height: 200px;
-  }
+.dangil-flip-page.flip {
+  animation: dangilbookflip 0.8s cubic-bezier(.42,0,.58,1);
+}
+@keyframes dangilbookflip {
+  from { transform: rotateY(0deg); opacity: 1; }
+  to { transform: rotateY(-100deg); opacity: 0.3; }
 }
 </style>
 <div class="dangil-flip-wrap">
