--- a/index.html
+++ b/index.html
@@ -379,7 +379,6 @@
     </div>
     <!-- ★ 메인베너와 후기 사이에 아래 코드 삽입 ★ -->
 <style>
-<style>
 .dangil-flip-wrap {
   width: 100%;
   display: flex;
@@ -410,10 +409,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.2rem; /* 데스크탑 글씨 크기 */
+  font-size: 1rem;   /* 글씨 최소화, 네모안에 다 들어옴 */
   text-align: center;
   word-break: break-all;
-  padding: 0 16px;
+  padding: 0 10px;
   box-sizing: border-box;
   transform-style: preserve-3d;
   transition: transform 0.8s cubic-bezier(.42,0,.58,1), opacity 0.5s;
@@ -445,10 +444,55 @@
     min-height: 200px;
   }
   .dangil-flip-page {
-    font-size: 1rem;
+    font-size: 0.9rem;
     border-radius: 10px;
   }
 }
+</style>
+
+<div class="dangil-flip-wrap">
+  <div class="dangil-flip-seq">
+    <video id="dangilMainVideo" class="dangil-flip-page" autoplay muted playsinline>
+      <source src="video.mp4" type="video/mp4">
+      동영상이 지원되지 않습니다.
+    </video>
+    <img id="dangilMainImage" class="dangil-flip-page hidden" src="photo.jpg" alt="사진">
+    <img id="dangilAdImage" class="dangil-flip-page hidden" src="ad.jpg" alt="광고">
+  </div>
+</div>
+
+<script>
+window.addEventListener('DOMContentLoaded', function() {
+  const video = document.getElementById('dangilMainVideo');
+  const image = document.getElementById('dangilMainImage');
+  const ad = document.getElementById('dangilAdImage');
+
+  // 초기화: 동영상만 보이게
+  video.classList.remove('hidden', 'flip');
+  image.classList.add('hidden'); image.classList.remove('flip');
+  ad.classList.add('hidden'); ad.classList.remove('flip');
+  video.play();
+
+  // 1. 동영상 5초 후 flip
+  setTimeout(function() {
+    video.classList.add('flip');
+    setTimeout(function() {
+      video.classList.add('hidden');
+      image.classList.remove('hidden');
+      setTimeout(function() { image.classList.remove('flip'); }, 10);
+      // 2. 사진 3초 후 flip
+      setTimeout(function() {
+        image.classList.add('flip');
+        setTimeout(function() {
+          image.classList.add('hidden');
+          ad.classList.remove('hidden');
+          setTimeout(function() { ad.classList.remove('flip'); }, 10);
+        }, 800);
+      }, 3000);
+    }, 800);
+  }, 5000);
+});
+</script>
 </style>
 
 <div class="dangil-flip-wrap">
