--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1rem;   /* 글씨 최소화, 네모안에 다 들어옴 */
+  font-size: 1rem;   /* 글씨 크기 조절 */
   text-align: center;
   word-break: break-all;
   padding: 0 10px;
@@ -449,6 +449,7 @@
   }
 }
 </style>
+
 <div class="dangil-flip-wrap">
   <div class="dangil-flip-seq">
     <video id="dangilMainVideo" class="dangil-flip-page" autoplay muted playsinline>
@@ -459,6 +460,7 @@
     <img id="dangilAdImage" class="dangil-flip-page hidden" src="ad.jpg" alt="광고">
   </div>
 </div>
+
 <script>
 window.addEventListener('DOMContentLoaded', function() {
   const video = document.getElementById('dangilMainVideo');
