--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
       }
       .review-title, .realtime-section > h2, .form-title { font-size: 25px !important; }
     }
+    @media (min-width: 801px) {
     .realtime-section {
       background-color: #fff;
   border-radius: 20px;
@@ -383,6 +384,7 @@
     </div>
     <!-- ★ 메인베너와 후기 사이에 아래 코드 삽입 ★ -->
 <style>
+  @media (min-width: 801px) {
 .dangil-flip-wrap {
   width: 100%;
   display: flex;
