--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@
       }
       .review-title, .realtime-section > h2, .form-title { font-size: 25px !important; }
     }
+
+    @media (max-width: 600px) {
+  .realtime-section {
+    border: 4px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(45deg, #ffd700, #ffb300, #fff6bf, #ffb300, #ffd700);
+    border-radius: 20px;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.15);
+    margin-bottom: 20px;
+    font-size: 25px;
+    color: #000;
+    position: relative;
+  }
+}
+    
     @media (min-width: 801px) {
     .realtime-section {
       background-color: #fff;
