--- a/index.html
+++ b/index.html
@@ -194,20 +194,20 @@
 
     @media (max-width: 600px) {
   .realtime-section {
+    font-size: 16px; /* 모바일에 맞는 크기 */
+    padding: 8px;    /* 모바일에 맞게 축소 */
+    margin-bottom: 15px;
+
     border: 4px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(45deg, #ffd700, #ffb300, #fff6bf, #ffb300, #ffd700);
     border-radius: 20px;
-    padding: 10px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,0.15);
-    margin-bottom: 20px;
-    font-size: 25px;
     color: #000;
     position: relative;
   }
 }
-    
     @media (min-width: 801px) {
     .realtime-section {
       background-color: #fff;
