--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ window.addEventListener('DOMContentLoaded', function() {
 });
 </script>
     <div class="review-section">
-      <div class="review-title">💬 실제 후기</div>
+      <div class="review-title">💬 설치 후기</div>
       <div class="review-slider" aria-label="Customer Reviews Slider">
         <div class="review-slide" tabindex="0" role="button"><img src="review1.png.png" alt="후기 1" /></div>
         <div class="review-slide" tabindex="0" role="button"><img src="review2.png.png" alt="후기 2" /></div>
@@ -555,7 +555,7 @@ window.addEventListener('DOMContentLoaded', function() {
       <div class="section-title" style="font-size:20px;color:#222;">Q. 통신사를 선택해주세요.</div>
       <div class="btn-group" id="carrier-group">
         <button type="button">SK</button><button type="button">KT</button><button type="button">LG</button>
-        <button type="button">LG 헬로비전</button><button type="button">KT 스카일라이프</button>
+        <button type="button">LG 헬로비전</button><button type="button">KT 스카이라이프</button>
       </div>
       <div class="section-title" style="font-size:20px;color:#222;">Q. 부가상품을 선택해주세요. (복수 선택 가능)</div>
       <div class="btn-group multi" id="addons-group">
