--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ window.addEventListener('DOMContentLoaded', function() {
   }, 5000);
 });
 </script>
-    <div class="review-section">
+        <div class="review-section">
       <div class="review-title">💬 설치 후기</div>
       <div class="review-slider" aria-label="Customer Reviews Slider">
         <div class="review-slide" tabindex="0" role="button"><img src="review1.png.png" alt="후기 1" /></div>
@@ -512,6 +512,11 @@ window.addEventListener('DOMContentLoaded', function() {
         <div class="review-slide" tabindex="0" role="button"><img src="review4.png.png" alt="후기 4" /></div>
         <div class="review-slide" tabindex="0" role="button"><img src="review5.png.png" alt="후기 5" /></div>
       </div>
+      <!-- 추가 시작 -->
+      <div style="text-align:center; margin-top: 12px;">
+        <a href="https://cafe.naver.com/f-e/cafes/23720145/menus/85?viewType=I" target="_blank" style="display:inline-block; background:#FFD700; color:#222; font-weight:700; padding:12px 36px; border-radius:12px; font-size:19px; margin-bottom:5px; box-shadow:0 2px 8px #fff2b0cc;">설치후기 보러가기</a>
+      </div>
+      <!-- 추가 끝 -->
     </div>
     <div class="section-separator"></div>
     <div class="realtime-section">
