--- a/index.html
+++ b/index.html
@@ -469,11 +469,29 @@
     <img id="dangilAdImage" class="dangil-flip-page hidden" src="ad.jpg" alt="광고">
   </div>
 </div>
-<!-- 추가 시작 -->
-<div style="text-align:center; margin-bottom: 22px;">
-  <a href="https://cafe.naver.com/ollehkt1004" target="_blank" style="display:inline-block; background:#0077c2; color:#fff; font-weight:700; padding:12px 36px; border-radius:12px; font-size:19px; box-shadow:0 2px 8px #cce5ff;">카페보러가기</a>
+<div style="margin-bottom: 22px;">
+  <a href="https://cafe.naver.com/ollehkt1004" target="_blank"
+    style="
+      display: block;
+      width: 100%;
+      background: linear-gradient(90deg, #ffd700 0%, #ffb300 100%);
+      color: #222;
+      font-weight: 900;
+      padding: 24px 0;
+      border-radius: 18px;
+      font-size: 2.2rem;
+      box-shadow: 0 4px 16px #fff6bf80;
+      text-align: center;
+      letter-spacing: 1.5px;
+      border: none;
+      margin: 0 auto;
+      transition: background 0.2s;
+      text-decoration: none;
+    "
+    onmouseover="this.style.background='linear-gradient(90deg,#ffb300 0%,#ffd700 100%)'"
+    onmouseout="this.style.background='linear-gradient(90deg,#ffd700 0%,#ffb300 100%)'"
+  >카페보러가기</a>
 </div>
-<!-- 추가 끝 -->
 
 <script>
 window.addEventListener('DOMContentLoaded', function() {
