--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 원본 당일민족1<!DOCTYPE html>
 <html lang="ko">
 <head>
+  if (location.hostname === "d1mj9182.github.io") {
+  location.href = "https://dangil-landing.vercel.app" + location.pathname + location.search + location.hash;
+}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>당일민족 상담 신청</title>
