--- a/index.html
+++ b/index.html
@@ -844,6 +844,11 @@ document.addEventListener("DOMContentLoaded", function () {
       });
 
       if (res.ok) {
+        ttq.track('CompleteRegistration', {
+  // 필드명은 필요 시 맞춰 수정
+  name: name,
+  phone_number: phone
+});
         alert("상담 신청이 정상적으로 접수되었습니다!");
         form.reset();
         document.querySelectorAll(".btn-group button.active")
