--- a/index.html
+++ b/index.html
@@ -866,5 +866,16 @@ document.addEventListener("DOMContentLoaded", function () {
 })();
 // ======= ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑ =======
 </script>
+  <footer style="background-color:#f9f9f9; padding:20px; text-align:center; font-size:14px; color:#666; margin-top:40px; border-top:1px solid #ddd;">
+  <div>
+    <strong>당일민족</strong><br>
+    대표자: 이진호 &nbsp;|&nbsp; 사업자등록번호: 706-24-00856<br>
+    통신판매업신고번호: 2024-광주광산-0343호<br>
+    이메일: skfdms10044@gmail.com<br>
+    <br>
+    &copy; 2025 당일민족. All rights reserved.
+  </div>
+</footer>
+
 </body>
 </html>
