--- a/index.html
+++ b/index.html
@@ -400,6 +400,10 @@
     <div class="banner">
       <img src="form_banner_1600_400.png" alt="인터넷성지 배너" />
     </div>
+    <div style="width:100%; margin: 24px 0; text-align:center;">
+  <img src="main_banner_square.jpg" alt="추가 이미지" style="width:100%; max-width:1080px; height:auto; border-radius:16px; box-shadow:0 4px 16px rgba(0,0,0,0.1);" />
+</div>
+
     <!-- ★ 메인베너와 후기 사이에 아래 코드 삽입 ★ -->
 <style>
 .dangil-flip-wrap {
