--- a/index.html
+++ b/index.html
@@ -876,6 +876,7 @@ document.addEventListener("DOMContentLoaded", function () {
     대표자: 이진호 &nbsp;|&nbsp; 사업자등록번호: 706-24-00856<br>
     통신판매업신고번호: 2024-광주광산-0343호<br>
     이메일: skfdms10044@gmail.com<br>
+    대표번호: 1661-9182<br>
     <br>
     &copy; 2025 당일민족. All rights reserved.
   </div>
